squashing bugz

--- a/public/style/ai.css
+++ b/public/style/ai.css
@@ -137,9 +137,10 @@ body.chat-active {
     left: 50%;
     transform: translate(0, -50%);
     padding: 1rem;
-    background: greenyellow;
+    background: #FFDB3D;
     border-radius: 1rem;
     transition: bottom 500ms ease-in;
+    color: #000;
 }
 
 .question-wrapper {
@@ -328,8 +329,8 @@ body.chat-active {
 
 #askButton:hover {
     /* animation-play-state: paused; */
-    color: greenyellow;
-    /* border: 3px solid greenyellow; */
+    color: #FFDB3D;
+    /* border: 3px solid #FFDB3D; */
 }
 
 button:disabled {
@@ -557,7 +558,7 @@ button:disabled {
 }
 
 .answer-text a {
-    background: greenyellow;
+    background: #FFDB3D;
     padding: .5rem 1rem;
     border-radius: 3rem;
     color: #000;
@@ -698,7 +699,7 @@ button:disabled {
 .follow-up-title {
     font-size: 0.9rem;
     color: #ffdb3d;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     font-weight: 500;
 }
 
@@ -706,17 +707,18 @@ button:disabled {
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
-    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .follow-up-section .chip {
-    font-size: 0.9rem;
+    font-size: 0.825rem;
     padding: 0.5rem 1rem;
     background: #262421;
-    border: 1px solid #ffdb3d6e;
     color: #fff;
     animation: none;
     margin: 0;
+    opacity: 1;
+    justify-content: flex-start;
 }
 
 .follow-up-section .chip:hover {
